# V4-std

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
cmake/: generate_sys_ids.cmake
include/v4std/: ddt.hpp  ddt_types.h  span.hpp  sys_handlers.hpp  sys_led.hpp  v4sys_ids.def
src/: ddt.cpp  sys_handlers.cpp  sys_led.cpp
tests/: test_ddt.cpp  test_ddt_types.cpp  test_sys_handlers.cpp  test_sys_ids.cpp  test_sys_led.cpp
